--- a/src/styleComponents/photoGallery.scss
+++ b/src/styleComponents/photoGallery.scss
@@ -3,7 +3,7 @@
   transition: all 0.5s ease;
   overflow: hidden;
   visibility: visible;
-  position: relative;
+  position: absolute;
   width:100%;
   opacity: 1;
 }
@@ -16,35 +16,35 @@
 }
 
 .imageContainer {
-    position: relative;
-    width: 100%;
-    height: 640px;
+  position: relative;
+  width: 100%;
+  height: 640px;
 }
 .shadow {
-    box-shadow: inset 0px -39px 14px -14px rgb(250 250 250);
-    position: relative;
-    z-index: 2;
-    bottom: 123px;
-    height: 40px;
+  box-shadow: inset 0px -39px 14px -14px rgb(250 250 250);
+  position: absolute;
+  z-index: 2;
+  bottom: 0px;
+  width: 100%;
+  height: 40px;
 }
 
 .ghostContent{
-    opacity: none;
+  opacity: none;
 }
 
 .galleryIMG {
   position: relative;
   width: 100%;
   height: 640px;
-
 }
 
 .imgTag {
     background: linear-gradient(270deg, rgba(231,231,232,0) 0%, rgba(76,142,203,1) 75%);   
     width: 20%;
     height: 10%;
-    position: relative;
-    top: -95%;
+    position: absolute;
+    top: 7%;
     z-index: 2; 
     display: flex;
     justify-content: start;
@@ -59,8 +59,9 @@
     background-color: #4c8ecb;
     z-index: 2;
     border-radius: 25px;
-    position: relative;
-    bottom: 32%;
+    position: absolute;
+    bottom: -10%;
+    left: 27%;
     padding: 1%;
     box-shadow:
     0 2.8px 2.2px rgba(0, 0, 0, 0.034),
